# harmonic_cadence

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  ML-EVOLUTION-PLAN.md  Makefile  PROBE-EMBEDDINGS-FINDINGS.md  README.md  ROADMAP.md  TRITONE-ADJUDICATION.md  WORKLIST-ADJUDICATION.md  __init__.py  __main__.py  analise_funcoes.py  app.py  djavan - sina.html  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/domain/: entities.py
app/infrastructure/repositories/: cifraclub.py
app/infrastructure/scrapers/: cifraclub_scraper.py
app/interface/http/: routes.py
data/: zeca-pagodinho_vai-vadiar.json
harmonic_cadence/cli/: README.md  main.py
harmonic_cadence/domain/: cadence.py  chord.py  constants.py  harmony.py  modal_analysis.py
harmonic_cadence/infra/: cifra_api.py  utils.py
harmonic_cadence/presentation/: formatter.py
harmonic_cadence/presentation/reports/: base.py  factory.py  html.py  json.py  markdown.py
harmonic_cadence/services/: analysis_service.py
harmonic_cadence/utils/: encoding.py  formatting.py
openspec/changes/add-cadential-v-as-tonic-path/: proposal.md
openspec/changes/add-ii-v-bracket-center-path/: design.md  tasks.md
openspec/changes/adjudicate-center-worklist/: proposal.md  tasks.md
openspec/changes/adjudicate-tritone-ledger/: design.md  proposal.md  tasks.md
scripts/: apply_openspec_models.sh  audit_center_adjudication.py  audit_completeness.py  audit_tritone_adjudication.py  chediak_structural_gold.py  key_baseline.py  modal_coloring_groundtruth.py  songbook_baseline.py  split_songbook.py  verify_transcription.py  worklist_adjudication.py
tests/: test_harmony.py
(+362 files in other folders)
